adding Durban pics, adding logos, fixing program info

--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -72,3 +72,13 @@
 		flex-direction: row-reverse;
 	}
 }
+
+
+.table {
+  border-collapse: separate;
+  border-spacing: 50px 0;
+}
+
+.td {
+  padding: 10px 0;
+}
